Added missing cmim arrays. Finished implementing cmim visualization

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ _oldv2ada_cv_review/
 ada_cv_review/
 cmimArrayVisualizations*/
 cmimArrayStdVisualizations*/
+cmimMaskPrevalence/
+cmimStdMaskPrevalence/
