--- a/environment.yml
+++ b/environment.yml
@@ -17,6 +17,7 @@ dependencies:
   - scikit-image=0.18.1
   - scikit-learn=0.24.2
   - scipy=1.6.3
+  - seaborn
   - setuptools=49.6.0
   - tqdm=4.61.1=pyhd8ed1ab_0
   - pip:
