--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ _oldv2ada_cv_review/
 ada_cv_review/
 cmimArrayVisualizations*/
 cmimArrayStdVisualizations*/
+cmimArrayModVisualizations*/
+cmimArrayStdModVisualizations*/
 cmimMaskPrevalence/
 cmimStdMaskPrevalence/
 .ipynb_checkpoints
@@ -17,3 +19,4 @@ cmimStdMaskPrevalence/
 test.png
 mask_distribution/
 _old_tests/
+cmim_mod_checks/
