--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,7 @@ rf_cv_review/
 rf_std_cv_review/
 _oldv2ada_cv_review/
 ada_cv_review/
-cmimArrayVisualizations*/
-cmimArrayStdVisualizations*/
-cmimArrayModVisualizations*/
-cmimArrayStdModVisualizations*/
+cmimArray*Visualizations*/
 cmimMaskPrevalence/
 cmimStdMaskPrevalence/
 .ipynb_checkpoints
