--- a/environment.yml
+++ b/environment.yml
@@ -25,4 +25,5 @@ dependencies:
   - tqdm=4.61.1
   - pip:
     - sloth==1.0
+    - xgboost==1.5.0
 prefix: D:\Users\x_met\Anaconda3\envs\iris_gender4
