--- a/environment.yml
+++ b/environment.yml
@@ -26,4 +26,5 @@ dependencies:
   - pip:
     - sloth==1.0
     - xgboost==1.5.0
+    - biopython==1.79
 prefix: D:\Users\x_met\Anaconda3\envs\iris_gender4
