--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ data_peri/left_pre_vgg.npz
 data_peri/right_pre_vgg.npz
 data_peri/both_pre_vgg.npz
 vgg_feat_lsvm_results_prelim/
+results_pre_param_selection/
