Preparing for vgg peri test 3

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ data_peri/right.npz
 data_peri/left_pre_vgg.npz
 data_peri/right_pre_vgg.npz
 data_peri/both_pre_vgg.npz
+data_peri/_old_both_pre_vgg.npz
 vgg_feat_lsvm_results_prelim/
 results_pre_param_selection/
 *.swp
