--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ data_peri/_old_both_pre_vgg.npz
 vgg_feat_lsvm_results_prelim/
 results_pre_param_selection/
 *.swp
+/data_peri/both_pre_vgg_half.npz
+/data_peri/both_pre_vgg_quart.npz
