Fixed generation of pairs. Includes code for testing pairs through visualization.

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ data_peri/_old_both_pre_vgg.npz
 data_peri/_pre_fix_both_vgg.npz
 vgg_feat_lsvm_results_prelim/
 experiments/vgg_lsvm/results_pre_param_selection/
+experiments/mask_pairs/visualizations
 *.swp
 /data_peri/both_pre_vgg_half.npz
 /data_peri/both_pre_vgg_quart.npz
@@ -28,3 +29,4 @@ data/240x40_pre_vgg.npz
 data/240x40_fixed_pre_vgg.npz
 data/240x20_pre_vgg.npz
 data/240x20_fixed_pre_vgg.npz
+spp_tests/
