--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ data_peri/_old_both_pre_vgg.npz
 data_peri/_pre_fix_both_vgg.npz
 vgg_feat_lsvm_results_prelim/
 experiments/vgg_lsvm/results_pre_param_selection/
-experiments/mask_pairs/visualizations
+experiments/mask_pairs/visualizations*
 *.swp
 /data_peri/both_pre_vgg_half.npz
 /data_peri/both_pre_vgg_quart.npz
